# final-project-assignment-DomenicP

./: README.md
camera-server/: .gitignore  LICENSE  Makefile  pyproject.toml
camera-server/camera_server/: __init__.py  __main__.py
docs/: protocol.md
web-server/: Makefile  pyproject.toml
web-server/web_server/: __init__.py  default_settings.py
web-server/web_server/static/: app.js  style.css
web-server/web_server/templates/: index.html
