[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "camera_server"
authors = [{ name = "Domenic Rodriguez", email = "DomenicP@users.noreply.github.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pyzmq==22.3.0",
]
